verif dates et rectif lecteur tache